# sending_app

./: .env.sample  README.md  manage.py  pyproject.toml
sending/: admin.py  apps.py  forms.py  models.py  operator.py  tests.py  urls.py  validators.py  views.py
sending/management/commands/: send.py
sending/migrations/: 0001_initial.py  0002_alter_mailing_options_alter_mailing_table.py  0003_alter_mailing_is_active.py  0004_message_is_active.py  0005_alter_message_options_alter_message_table.py  0006_messagerecipient_is_active_messagerecipient_owner.py  0007_alter_messagerecipient_options_and_more.py  0008_alter_mailingattempt_options_and_more.py  0009_mailingattempt_status_and_more.py  0010_mailingattempt_owner_mailingattempt_recipient_and_more.py  0011_alter_mailingattempt_options_and_more.py  0012_remove_mailingattempt_recipient_and_more.py  0013_rename_recipient_mailingattempt_recipients.py  0014_alter_mailingattempt_recipients.py  0015_remove_mailingattempt_is_active_and_more.py  0016_alter_mailingattempt_unique_together.py  0017_alter_mailingattempt_mailing.py  0018_alter_mailingattempt_owner.py  0019_alter_mailing_options_alter_mailingattempt_options_and_more.py
sending/templates/sending/: attempt_detail.html  block_mailing_form.html  block_message_form.html  block_recipient_form.html  home.html  mailing_attempt_form.html  mailing_attempts.html  mailing_confirm_delete.html  mailing_detail.html  mailing_form.html  mailing_list.html  mailing_list.hyml  message_confirm_delete.html  message_detail.html  message_form.html  messages_list.html  recipient_confirm_delete.html  recipient_detail.html  recipient_form.html  recipients_list.html  send_mailing.html  statistics.html
sending_app/: asgi.py  settings.py  urls.py  wsgi.py
templates/base_templates/: base.html  contact.html  footer.html  menu.html  pagination.html
users/: admin.py  forms.py  models.py  tests.py  urls.py  utils.py  views.py
users/management/: csu.py
users/management/commands/: cau.py
users/migrations/: 0001_initial.py  0002_alter_customuser_is_active.py  0003_customuser_activation_token_and_more.py  0004_alter_customuser_options_alter_customuser_table.py  0005_alter_customuser_groups.py
users/templates/users/: activated.html  failed_activation.html  login.html  logout.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_form.html  profile.html  register.html  user_confirm_delete.html  users.html
users/templatetags/: custom_filters.py
