[project]
name = "sending_app"
version = "0.1.0"
description = ""
authors = [
    {name = "alekseyzvyagintsev",email = "alex0236889@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.2.6,<6.0.0)",
    "python-dotenv (>=1.1.1)",
    "psycopg2-binary (==2.9.10)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
poetry-core = {version = "^2.1.3", python = ">=3.13,<4.0"}

[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.1"
black = "^25.1.0"
isort = "^6.0.0"
mypy = "^1.14.1"

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
exclude = ['venv', '.venv', 'tests', '__pycache__']
check_untyped_defs = true
strict = true
warn_unreachable = true

[tool.isort]
# максимальная длина строки
line_length = 119
multi_line_output = 1

[tool.black]
# Максимальная длина строки
line-length = 119
# Файлы, которые не нужно форматировать
exclude = '''
(
  /(
      \.eggs         # Исключить несколько общих каталогов
    | \.git          # в корне проекта
    | \.mypy_cache
    | \.venv
  )/
  | foo.py           # Также отдельно исключить файл с именем foo.py
                     # в корне проекта
)
'''
